# brio

./: Cargo.toml  LICENSE  README.md
examples/: server.rs
examples/static/: index.html
src/: body.rs  lib.rs  request.rs  response.rs  router.rs  server.rs
tests/: hyper.rs  smoke.rs
tests/util/: mod.rs
