[package]
name = "loops"
version = "0.1.0"
authors = ["imccrum <ianmccrum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
async-std = "1.5.0"
httparse = "1.3.4"
serde_json = "1.0.45"

[dev-dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2.11", features = ["full"] }
