[package]
name = "brio"
description = "Async http server and web framework"
version = "0.2.0"
authors = ["imccrum <me@ianmccrum.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
async-std = "1.5.0"
httparse = "1.3.4"
serde_json = "1.0.45"
signal-hook = "0.1.13"
futures-timer = "3.0.2"
mime_guess = "2.0.3"
mime = "0.3.16"
log = "0.4.8"

[dev-dependencies]
tokio = { version = "0.2.11", features = ["full"] }
rand = "0.7.3"
hyper = "0.13.2"
env_logger = "0.7.1"
